--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 //Components
 @import "./components/home";
 @import "./components/stories";
-@import "./components//features";
+@import "./components/features";
+@import "./components/navbar";
 
 //Screens
