Responsive Home and Navbar

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,6 +10,7 @@
 
   /*GRADIENT*/
   --mainAccent: linear-gradient(#5a77ff, #bc7198, #ffc593);
+  --mainAccentHr: linear-gradient(to left, #5a77ff, #bc7198, #ffc593);
 }
 
 html {
