--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -24,12 +24,43 @@
 }
 
 .black-btn {
-  color: #000000;
-  font-size: 12px;
-  font-style: normal;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #000000;
+  border: none;
+  color: white;
   font-weight: 700;
-  line-height: normal;
-  letter-spacing: 2px;
+  gap: 8px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  text-transform: uppercase;
+
+  &::before {
+    width: 110%;
+    height: 150px;
+    position: absolute;
+    content: "";
+    background-color: var(--lightGrey);
+    left: -120%;
+    top: 0;
+    transition-duration: 0.3s;
+    mix-blend-mode: difference;
+  }
+
+  &:hover::before {
+    transition-duration: 0.5s;
+    transform: translate(100%, -50%);
+  }
+
+  &:active {
+    transform: translate(5px, 5px);
+    transition: transform 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
 }
 
 .white-btn {
