--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,5 +6,6 @@
 @import "./components/stories";
 @import "./components/features";
 @import "./components/navbar";
+@import "./components/footer";
 
 //Screens
