--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -3,7 +3,7 @@
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
-    line-height: 40px; /* 125% */
+    line-height: 40px;
     letter-spacing: 3.333px;
   }
   p {
