--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,10 @@
 @import "./base/settings";
 
 //Components
+@import "./components/navbar";
 @import "./components/home";
 @import "./components/stories";
 @import "./components/features";
-@import "./components/navbar";
+@import "./components/pricing";
 
 //Screens
